Fix search icon disappearing on tablet viewport width

--- a/css/style.css
+++ b/css/style.css
@@ -6357,7 +6357,7 @@ body {
   background-color: #981e32;
   color: #ffffff; }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   #bs-header-navbar-collapse-1 > form > div > input {
     width: 82%; }
   #bs-header-navbar-collapse-1 > form > button {
