--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -120,7 +120,7 @@ $dropDown: false;
   color: $white;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   #bs-header-navbar-collapse-1 > form > div > input {
     width: 82%;
   }
